# myabm

./: .buildinfo  .gitignore  Airplane.py  LICENSE.md  api.html  genindex.html  guide.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.doctrees/: api.doctree  guide.doctree  index.doctree  sg_execution_times.doctree
.doctrees/examples/: demo_life.doctree  demo_segregation.doctree  index.doctree  sg_execution_times.doctree
.doctrees/guide/: connectivity.doctree  installation.doctree  ortho.doctree  ref.doctree  structure.doctree  templates.doctree
.github/workflows/: documentation.yml
_downloads/339ea5c851a359095a14314cfe5d7b59/: demo_skeletal_cells.ipynb
_downloads/380ece8ff272d42985ef5c83bbc16118/: demo_life.py
_downloads/60f7ebc79157a84abc90e6af0bee8ef0/: demo_tissue_growth.ipynb
_downloads/70e44105236534207270193956021e06/: demo_curvotaxis.ipynb
_downloads/724e42efbc2f3ac92b1d222b45f6e068/: demo_life.ipynb
_downloads/7ef06625cd4a0c68524f655cfe4d6783/: demo_wellplate.ipynb
_downloads/870b10dd827f1dd1be2be8715fc1d9b8/: demo_segregation.ipynb
_modules/: index.html  myabm.html
_modules/myabm/: ortho.html  utils.html
_sources/: api.rst.txt  guide.rst.txt  sg_execution_times.rst.txt
examples/: GALLERY_HEADER.rst  demo_life.html  demo_life.py  demo_segregation.html  demo_segregation.py  index.html  ortho.py  sg_execution_times.html
guide/: connectivity.html  installation.html  ortho.html  ref.html  structure.html  templates.html
simulation/: mechanical.py
src/myabm/: utils.py  (+2 more)
(+51 files in other folders)
