[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "myabm"
dynamic = ["version"]
authors = [
    {name = "Timothy O. Josephson", email = "toj@bu.edu"},
]
description = "Agent-based modeling in python"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
keywords = [
    "mesh",
    "scientific",
    "engineering",
    "abm",
    "agent-based model",
    "simulation",
    "3D model"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    'importlib-metadata; python_version<"3.8"',
    "numpy>=1.20.0",
    "scipy>=1.10.0",
    "numba>=0.59.0",
    "pyvista>=0.45.2",
    "trame_vtk>=2.9.1",
    "imageio>=2.37.0"
    ]


[project.urls]
Documentation = 'https://bu-smbl.github.io/Tim-Josephson/'

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
fallback_version = "0.0.0"